# Stalkerbot

./: CMakeLists.txt  README.md  config.yaml  package.xml  raspicam_node_410x301_30fps_sports.launch
action/: Search.action
launch/: advanced_follow.launch  follow.launch  main.launch  move_base_follow.launch  simple_follow.launch  stationary.launch  test.launch
miscellaneous/: camerav2_410x308_10fps_sports.launch  raspicam_node_410x308_30fps_sports.launch
msg/: filtered_transform.msg  location_info.msg
src/: AMCL.py  Aruco_Pub.py  advanced_follow.py  camera_pub.py  data_process.py  detect_interval.py  fiducial_filter.py  fiducial_follow.py  fiducial_interval.py  follow.py  location_pub.py  location_pub_tf.py  motion_detect.py  move_base_follow.py  reference.txt  rotate_recovery.py  search_server.py  sigint_catcher.py  simple_follow.py  tf2_broadcaster.py
srv/: escape_probability.srv
